<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:fontFamily="monospace"
        android:text="@string/gifs_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/page_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Текущая страница: 1"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"/>

    <Button
        android:id="@+id/previous_page"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/back"
        android:textSize="12sp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@id/page_number"
        app:layout_constraintEnd_toStartOf="@id/next_page" />

    <Button
        android:id="@+id/next_page"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/next"
        android:textSize="12sp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="@id/page_number"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gifs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/page_number"
        app:layout_constraintBottom_toTopOf="@id/search_gifs"/>

    <TextView
        android:id="@+id/nothing_found"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nothing_found"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/gifs"
        app:layout_constraintBottom_toBottomOf="@id/gifs"
        app:layout_constraintStart_toStartOf="@id/gifs"
        app:layout_constraintEnd_toEndOf="@id/gifs"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/search_gifs"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="10dp"
        android:hint="@string/search_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@drawable/search_bg"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/search_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/search_button"
        app:layout_constraintTop_toTopOf="@id/search_gifs"
        app:layout_constraintBottom_toBottomOf="@id/search_gifs"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>